--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,8 @@
-<footer>
+<footer class="bg-dark text-white text-center py-3">
     <div class="container">
         <p>&copy; 2025 Öyküm Toptan Parke. Tüm hakları saklıdır.</p>
     </div>
 </footer>
-
-<!-- Bootstrap JS ve Popper.js -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
