--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Öyküm Toptan Parke</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
@@ -49,14 +48,29 @@
                         </div>
                     </div>
                 </div>
-                <!-- Diğer ürün kartları -->
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="images/parke2.jpg" class="card-img-top" alt="Masif Parke">
+                        <div class="card-body">
+                            <h5 class="card-title">Masif Parke</h5>
+                            <p class="card-text">Doğal ahşap dokusuyla masif parke seçenekleri.</p>
+                            <a href="#" class="btn btn-outline-primary">Detaylar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="images/parke3.jpg" class="card-img-top" alt="LVT Parke">
+                        <div class="card-body">
+                            <h5 class="card-title">LVT Parke</h5>
+                            <p class="card-text">Modern ve suya dayanıklı LVT parke çözümleri.</p>
+                            <a href="#" class="btn btn-outline-primary">Detaylar</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <!-- WhatsApp Simge -->
-    <a href="#" id="whatsapp-float" class="whatsapp-float" target="_blank">
-        <i class="fab fa-whatsapp"></i>
-    </a>
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
@@ -64,13 +78,5 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        document.getElementById('whatsapp-float').addEventListener('click', function(e) {
-            e.preventDefault();
-            var phone = '05322055283';
-            var message = encodeURIComponent('Merhaba, Fiyat bilgisi alabilir miyim?');
-            window.open('https://wa.me/' + phone + '?text=' + message, '_blank');
-        });
-    </script>
 </body>
 </html>
