--- a/index.html
+++ b/index.html
@@ -5,42 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Öyküm Toptan Parke</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigasyon -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Öyküm Toptan Parke</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Ana Sayfa</a></li>
-                    <li class="nav-item"><a class="nav-link" href="products.html">Ürünler</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">Hakkımızda</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">İletişim</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- Hero Bölümü -->
+    {% include header.html %}
     <section id="home" class="hero-section">
         <div>
             <h1>Öyküm Toptan Parke</h1>
             <p>Kaliteli Parke Çözümleriyle Mekanlarınızı Yenileyin</p>
             <a href="products.html" class="btn btn-primary btn-lg">Ürünleri Keşfet</a>
-        </div>
-    </section>
-    <!-- Ürünler Bölümü -->
+        </section>
     <section id="products" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Ürünlerimiz</h2>
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="images/parke1.jpg" class="card-img-top" alt="Laminat Parke">
+                        <img src="/images/parke1.jpg" class="card-img-top" alt="Laminat Parke">
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke</h5>
                             <p class="card-text">Dayanıklı ve estetik laminat parke modellerimizle tanışın.</p>
@@ -50,7 +31,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="images/parke2.jpg" class="card-img-top" alt="Masif Parke">
+                        <img src="/images/parke2.jpg" class="card-img-top" alt="Masif Parke">
                         <div class="card-body">
                             <h5 class="card-title">Masif Parke</h5>
                             <p class="card-text">Doğal ahşap dokusuyla masif parke seçenekleri.</p>
@@ -60,7 +41,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="images/parke3.jpg" class="card-img-top" alt="LVT Parke">
+                        <img src="/images/parke3.jpg" class="card-img-top" alt="LVT Parke">
                         <div class="card-body">
                             <h5 class="card-title">LVT Parke</h5>
                             <p class="card-text">Modern ve suya dayanıklı LVT parke çözümleri.</p>
@@ -71,12 +52,6 @@
             </div>
         </div>
     </section>
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
-        <div class="container">
-            <p>&copy; 2025 Öyküm Toptan Parke. Tüm hakları saklıdır.</p>
-        </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    {% include footer.html %}
 </body>
 </html>
