--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -5,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Öyküm Toptan Parke</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +18,8 @@
             <h1>Öyküm Toptan Parke</h1>
             <p>Kaliteli Parke Çözümleriyle Mekanlarınızı Yenileyin</p>
             <a href="products.html" class="btn btn-primary btn-lg">Ürünleri Keşfet</a>
-        </section>
+        </div>
+    </section>
     <section id="products" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Ürünlerimiz</h2>
@@ -52,6 +57,17 @@
             </div>
         </div>
     </section>
+    <a href="#" id="whatsapp-float" class="whatsapp-float" target="_blank">
+        <i class="fab fa-whatsapp"></i>
+    </a>
     {% include footer.html %}
+    <script>
+        document.getElementById('whatsapp-float').addEventListener('click', function(e) {
+            e.preventDefault();
+            var phone = '05322055283';
+            var message = encodeURIComponent('Merhaba, Fiyat bilgisi alabilir miyim?');
+            window.open('https://wa.me/' + phone + '?text=' + message, '_blank');
+        });
+    </script>
 </body>
 </html>
