--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
----
-layout: default
----
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -8,11 +5,27 @@ layout: default
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Öyküm Toptan Parke</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    {% include header.html %}
+    <!-- Navigasyon -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Öyküm Toptan Parke</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Ana Sayfa</a></li>
+                    <li class="nav-item"><a class="nav-link" href="products.html">Ürünler</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">Hakkımızda</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">İletişim</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Hero Bölümü -->
     <section id="home" class="hero-section">
         <div>
             <h1>Öyküm Toptan Parke</h1>
@@ -20,13 +33,14 @@ layout: default
             <a href="products.html" class="btn btn-primary btn-lg">Ürünleri Keşfet</a>
         </div>
     </section>
+    <!-- Ürünler Bölümü -->
     <section id="products" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Ürünlerimiz</h2>
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke1.jpg" class="card-img-top" alt="Laminat Parke">
+                        <img src="images/parke1.jpg" class="card-img-top" alt="Laminat Parke">
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke</h5>
                             <p class="card-text">Dayanıklı ve estetik laminat parke modellerimizle tanışın.</p>
@@ -36,7 +50,7 @@ layout: default
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke2.jpg" class="card-img-top" alt="Masif Parke">
+                        <img src="images/parke2.jpg" class="card-img-top" alt="Masif Parke">
                         <div class="card-body">
                             <h5 class="card-title">Masif Parke</h5>
                             <p class="card-text">Doğal ahşap dokusuyla masif parke seçenekleri.</p>
@@ -46,7 +60,7 @@ layout: default
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke3.jpg" class="card-img-top" alt="LVT Parke">
+                        <img src="images/parke3.jpg" class="card-img-top" alt="LVT Parke">
                         <div class="card-body">
                             <h5 class="card-title">LVT Parke</h5>
                             <p class="card-text">Modern ve suya dayanıklı LVT parke çözümleri.</p>
@@ -57,17 +71,12 @@ layout: default
             </div>
         </div>
     </section>
-    <a href="#" id="whatsapp-float" class="whatsapp-float" target="_blank">
-        <i class="fab fa-whatsapp"></i>
-    </a>
-    {% include footer.html %}
-    <script>
-        document.getElementById('whatsapp-float').addEventListener('click', function(e) {
-            e.preventDefault();
-            var phone = '05322055283';
-            var message = encodeURIComponent('Merhaba, Fiyat bilgisi alabilir miyim?');
-            window.open('https://wa.me/' + phone + '?text=' + message, '_blank');
-        });
-    </script>
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3">
+        <div class="container">
+            <p>&copy; 2025 Öyküm Toptan Parke. Tüm hakları saklıdır.</p>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
