--- a/index.html
+++ b/index.html
@@ -5,46 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Öyküm Toptan Parke</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="header-placeholder"></div> <!-- Header burada yüklenecek -->
     <section id="home" class="hero-section">
-        <div>
+        <div class="container">
             <h1>Öyküm Toptan Parke</h1>
             <p>Kaliteli Parke Çözümleriyle Mekanlarınızı Yenileyin</p>
             <a href="products.html" class="btn btn-primary btn-lg">Ürünleri Keşfet</a>
-        </section>
+        </div>
+    </section>
     <section id="products" class="py-5">
         <div class="container">
-            <h2 class="text-center mb-5">Ürünlerimiz</h2>
+            <h2 class="text-center mb-4">Ürünlerimiz</h2>
             <div class="row">
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-3">
                     <div class="card product-card">
-                        <img src="/images/parke1.jpg" class="card-img-top" alt="Laminat Parke">
+                        <img src="images/parke1.jpg" class="card-img-top" alt="Laminat Parke">
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke</h5>
-                            <p class="card-text">Dayanıklı ve estetik laminat parke modellerimizle tanışın.</p>
+                            <p class="card-text">Dayanıklı ve estetik modeller.</p>
                             <a href="#" class="btn btn-outline-primary">Detaylar</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-3">
                     <div class="card product-card">
-                        <img src="/images/parke2.jpg" class="card-img-top" alt="Masif Parke">
+                        <img src="images/parke2.jpg" class="card-img-top" alt="Masif Parke">
                         <div class="card-body">
                             <h5 class="card-title">Masif Parke</h5>
-                            <p class="card-text">Doğal ahşap dokusuyla masif parke seçenekleri.</p>
+                            <p class="card-text">Doğal ahşap dokusu.</p>
                             <a href="#" class="btn btn-outline-primary">Detaylar</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-3">
                     <div class="card product-card">
-                        <img src="/images/parke3.jpg" class="card-img-top" alt="LVT Parke">
+                        <img src="images/parke3.jpg" class="card-img-top" alt="LVT Parke">
                         <div class="card-body">
                             <h5 class="card-title">LVT Parke</h5>
-                            <p class="card-text">Modern ve suya dayanıklı LVT parke çözümleri.</p>
+                            <p class="card-text">Modern ve suya dayanıklı.</p>
                             <a href="#" class="btn btn-outline-primary">Detaylar</a>
                         </div>
                     </div>
@@ -52,6 +53,35 @@
             </div>
         </div>
     </section>
-    
+    <div id="footer-placeholder"></div> <!-- Footer burada yüklenecek -->
+    <a href="#" id="whatsapp-float" class="whatsapp-float" target="_blank">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Header ve Footer'ı dinamik yükle
+        fetch('header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header-placeholder').innerHTML = data;
+            })
+            .catch(error => console.error('Header yüklenemedi:', error));
+
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-placeholder').innerHTML = data;
+            })
+            .catch(error => console.error('Footer yüklenemedi:', error));
+
+        // WhatsApp tıklama olayını ayarla
+        document.getElementById('whatsapp-float').addEventListener('click', function(e) {
+            e.preventDefault();
+            var phone = '05322055283';
+            var message = encodeURIComponent('Merhaba, Fiyat bilgisi alabilir miyim?');
+            window.open('https://wa.me/' + phone + '?text=' + message, '_blank');
+        });
+    </script>
 </body>
 </html>
