--- a/header.html
+++ b/header.html
@@ -1,6 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="index.html">Öyküm Toptan Parke</a>
+        <div class="social-icons d-flex align-items-center mx-3">
+            <a href="https://www.instagram.com" target="_blank" class="text-light me-2"><i class="fab fa-instagram fa-lg"></i></a>
+            <a href="https://www.facebook.com" target="_blank" class="text-light me-2"><i class="fab fa-facebook-f fa-lg"></i></a>
+            <a href="https://www.twitter.com" target="_blank" class="text-light"><i class="fab fa-twitter fa-lg"></i></a>
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
