--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
             <h1>Öyküm Toptan Parke</h1>
             <p>Kaliteli Parke Çözümleriyle Mekanlarınızı Yenileyin</p>
-            <a href="products.html" class="btn btn-primary btn-lg">Ürünleri Keşfet</a>
+            <a href="urunler.html" class="btn btn-primary btn-lg">Ürünleri Keşfet</a>
         </section>
     <section id="products" class="py-5">
         <div class="container">
