--- a/footer.html
+++ b/footer.html
@@ -7,4 +7,8 @@
             <a href="https://www.twitter.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-twitter fa-2x"></i></a>
         </div>
     </div>
+    <!-- WhatsApp Simgesi -->
+    <a href="https://wa.me/905123456789" target="_blank" class="whatsapp-float">
+        <i class="fab fa-whatsapp"></i>
+    </a>
 </footer>
