--- a/header.html
+++ b/header.html
@@ -1,104 +1,16 @@
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f8f9fa;
-    margin: 0;
-    padding: 0;
-}
-
-.hero-section {
-    background: url('images/hero-bg.jpg') no-repeat center center;
-    background-size: cover;
-    min-height: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-.hero-section .container {
-    padding: 15px;
-}
-
-.hero-section h1 {
-    font-size: 3rem;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.hero-section p {
-    font-size: 1.3rem;
-    margin-bottom: 15px;
-}
-
-.hero-section .btn {
-    font-size: 1.1rem;
-    padding: 8px 25px;
-}
-
-.product-card {
-    transition: transform 0.3s;
-    margin-bottom: 15px;
-}
-
-.product-card:hover {
-    transform: scale(1.05);
-}
-
-.card-img-top {
-    height: 200px;
-    object-fit: cover;
-}
-
-section {
-    padding: 40px 0;
-}
-
-footer {
-    background-color: #343a40;
-    color: white;
-    padding: 15px 0;
-}
-
-.whatsapp-float {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #25d366;
-    color: white;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    animation: bounce 2s infinite;
-    z-index: 1000;
-}
-
-.whatsapp-float i {
-    font-size: 2.5rem !important;
-}
-
-@keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
-    }
-    40% {
-        transform: translateY(-8px);
-    }
-    60% {
-        transform: translateY(-4px);
-    }
-}
-
-.social-icons a {
-    transition: transform 0.3s ease;
-}
-
-.social-icons a:hover {
-    transform: scale(1.2);
-}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Öyküm Toptan Parke</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Ana Sayfa</a></li>
+                <li class="nav-item"><a class="nav-link" href="urunler.html">Ürünler</a></li>
+                <li class="nav-item"><a class="nav-link" href="referanslar.html">Referanslar</a></li>
+                <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
