--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Öyküm Toptan Parke - Uygun Fiyatlı Parke</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <div id="header-placeholder"></div> <!-- Header burada yüklenecek -->
@@ -26,7 +27,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke</h5>
                             <p class="card-text">Dayanıklı ve estetik laminat parke modellerimizle tanışın.</p>
-                            <a href="urunler.html" class="btn btn-outline-primary">Detaylar</a>
+                            <a href="#" class="btn btn-outline-primary">Detaylar</a>
                         </div>
                     </div>
                 </div>
@@ -36,7 +37,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Masif Parke</h5>
                             <p class="card-text">Doğal ahşap dokusuyla masif parke seçenekleri.</p>
-                            <a href="urunler.html" class="btn btn-outline-primary">Detaylar</a>
+                            <a href="#" class="btn btn-outline-primary">Detaylar</a>
                         </div>
                     </div>
                 </div>
@@ -46,7 +47,7 @@
                         <div class="card-body">
                             <h5 class="card-title">LVT Parke</h5>
                             <p class="card-text">Modern ve suya dayanıklı LVT parke çözümleri.</p>
-                            <a href="urunler.html" class="btn btn-outline-primary">Detaylar</a>
+                            <a href="#" class="btn btn-outline-primary">Detaylar</a>
                         </div>
                     </div>
                 </div>
