--- a/referanslar.html
+++ b/referanslar.html
@@ -6,7 +6,7 @@
     <title>Öyküm Toptan Parke - Referanslar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
 </head>
 <body>
     <div id="header-placeholder"></div> <!-- Header burada yüklenecek -->
@@ -84,7 +84,10 @@
     <script>
         // Header'ı dinamik yükle
         fetch('header.html')
-            .then(response => response.text())
+            .then(response => {
+                if (!response.ok) throw new Error('Header dosyası bulunamadı: ' + response.status);
+                return response.text();
+            })
             .then(data => {
                 document.getElementById('header-placeholder').innerHTML = data;
             })
@@ -92,7 +95,10 @@
 
         // Footer'ı dinamik yükle
         fetch('footer.html')
-            .then(response => response.text())
+            .then(response => {
+                if (!response.ok) throw new Error('Footer dosyası bulunamadı: ' + response.status);
+                return response.text();
+            })
             .then(data => {
                 document.getElementById('footer-placeholder').innerHTML = data;
             })
