--- a/footer.html
+++ b/footer.html
@@ -6,6 +6,11 @@
             <a href="https://www.facebook.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-facebook-f fa-2x"></i></a>
             <a href="https://www.twitter.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-twitter fa-2x"></i></a>
         </div>
+        <div class="contact-info">
+            <p><strong>Öyküm Grup Toptan Parke ve Orman Ürünleri</strong></p>
+            <p>Çeceli mah. 2004 sok. Gül Apt. No:1 Karaisalı/Adana</p>
+            <p><strong>Telefon:</strong> +90 512 345 67 89</p>
+        </div>
     </div>
     <!-- WhatsApp Simgesi -->
     <a href="https://wa.me/905123456789" target="_blank" class="whatsapp-float">
