--- a/iletisim.html
+++ b/iletisim.html
@@ -19,9 +19,9 @@
                     <h4>Bize Ulaşın</h4>
                     <p>Her türlü soru, öneri veya teklif için bizimle iletişime geçebilirsiniz.</p>
                     <ul class="list-unstyled">
-                        <li><strong>Telefon:</strong> +90 512 345 67 89</li>
+                        <li><strong>Telefon:</strong> +90 532 205 52 83</li>
                         <li><strong>E-posta:</strong> info@oykumtoptanparke.com</li>
-                        <li><strong>Adres:</strong> Örnek Mah. 123 Sk. No:45, İstanbul, Türkiye</li>
+                        <li><strong>Adres:</strong> Çeceli Mah. 2004 Sk. No:1, Karaisalı, Adana</li>
                     </ul>
                 </div>
                 <div class="col-md-6 mb-4">
