--- a/footer.html
+++ b/footer.html
@@ -7,9 +7,10 @@
             <a href="https://www.twitter.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-twitter fa-2x"></i></a>
         </div>
         <div class="contact-info">
-            <p><strong>Öyküm Grup Toptan Parke ve Orman Ürünleri</strong></p>
+            <p><strong>ÖYKÜM GRUP</strong><\p>
+                <p>Toptan Parke ve Orman Ürünleri</p>
             <p>Çeceli mah. 2004 sok. Gül Apt. No:1 Karaisalı/Adana</p>
-            <p><strong>Telefon:</strong> +90 512 345 67 89</p>
+            <p><strong>Telefon:</strong> +90 532 205 52 83</p>
         </div>
     </div>
     <!-- WhatsApp Simgesi -->
