--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke1.jpg" class="card-img-top" alt="Laminat Parke">
+                        <img src="/images/laminantparke.jpeg" class="card-img-top" alt="Laminat Parke">
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke</h5>
                             <p class="card-text">Dayanıklı ve estetik laminat parke modellerimizle tanışın.</p>
