--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke2.jpg" class="card-img-top" alt="Masif Parke">
+                        <img src="/images/masifparke.jpeg" class="card-img-top" alt="Masif Parke">
                         <div class="card-body">
                             <h5 class="card-title">Masif Parke</h5>
                             <p class="card-text">Doğal ahşap dokusuyla masif parke seçenekleri.</p>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke3.jpg" class="card-img-top" alt="LVT Parke">
+                        <img src="/images/lvtparke.jpeg" class="card-img-top" alt="LVT Parke">
                         <div class="card-body">
                             <h5 class="card-title">LVT Parke</h5>
                             <p class="card-text">Modern ve suya dayanıklı LVT parke çözümleri.</p>
