--- a/urunler.html
+++ b/urunler.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke4.jpg" class="card-img-top" alt="Laminat Parke Premium">
+                        <img src="/images/laminantparke.jpeg" class="card-img-top" alt="Laminat Parke Premium">
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke Premium</h5>
                             <p class="card-text">Yüksek dayanıklılık ve şık tasarımlı premium laminat parke.</p>
@@ -27,7 +27,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke5.jpg" class="card-img-top" alt="Masif Parke Klasik">
+                        <img src="/images/masifparke.jpeg" class="card-img-top" alt="Masif Parke Klasik">
                         <div class="card-body">
                             <h5 class="card-title">Masif Parke Klasik</h5>
                             <p class="card-text">Doğal ahşap görünümüyle klasik masif parke modelleri.</p>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke6.jpg" class="card-img-top" alt="LVT Parke Modern">
+                        <img src="/images/lvtparke.jpeg" class="card-img-top" alt="LVT Parke Modern">
                         <div class="card-body">
                             <h5 class="card-title">LVT Parke Modern</h5>
                             <p class="card-text">Suya dayanıklı ve modern tasarımlı LVT parke çeşitleri.</p>
