--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container text-center">
             <h1>Öyküm Toptan Parke</h1>
             <p>Kaliteli Parke Çözümleriyle Mekanlarınızı Yenileyin</p>
-            <img src="images/oykumlogo.jpeg" alt="Öyküm Toptan Parke Logo" class="hero-logo">
+            <img src="images/oykumlogo.png" alt="Öyküm Toptan Parke Logo" class="hero-logo">
             <a href="products.html" class="btn btn-primary btn-lg">Ürünleri Keşfet</a>
         </div>
     </section>
