--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke</h5>
                             <p class="card-text">Dayanıklı ve estetik laminat parke modellerimizle tanışın.</p>
-                            <a href="#" class="btn btn-outline-primary">Detaylar</a>
+                            <a href="urunler.html" class="btn btn-outline-primary">Detaylar</a>
                         </div>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Masif Parke</h5>
                             <p class="card-text">Doğal ahşap dokusuyla masif parke seçenekleri.</p>
-                            <a href="#" class="btn btn-outline-primary">Detaylar</a>
+                            <a href="urunler.html" class="btn btn-outline-primary">Detaylar</a>
                         </div>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                         <div class="card-body">
                             <h5 class="card-title">LVT Parke</h5>
                             <p class="card-text">Modern ve suya dayanıklı LVT parke çözümleri.</p>
-                            <a href="#" class="btn btn-outline-primary">Detaylar</a>
+                            <a href="urunler.html" class="btn btn-outline-primary">Detaylar</a>
                         </div>
                     </div>
                 </div>
