--- a/urunler.html
+++ b/urunler.html
@@ -17,29 +17,29 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/laminantparke.jpeg" class="card-img-top" alt="Laminat Parke Premium">
+                        <img src="/images/laminantparke.jpeg" class="card-img-top" alt="Laminat Parke">
                         <div class="card-body">
-                            <h5 class="card-title">Laminat Parke Premium</h5>
-                            <p class="card-text">Yüksek dayanıklılık ve şık tasarımlı premium laminat parke.</p>
+                            <h5 class="card-title">Laminat Parke</h5>
+                            <p class="card-text">Dayanıklı ve estetik laminat parke modellerimizle tanışın.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/masifparke.jpeg" class="card-img-top" alt="Masif Parke Klasik">
+                        <img src="/images/masifparke.jpeg" class="card-img-top" alt="Masif Parke">
                         <div class="card-body">
-                            <h5 class="card-title">Masif Parke Klasik</h5>
-                            <p class="card-text">Doğal ahşap görünümüyle klasik masif parke modelleri.</p>
+                            <h5 class="card-title">Masif Parke</h5>
+                            <p class="card-text">Doğal ahşap görünümüyle masif parke modelleri.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/lvtparke.jpeg" class="card-img-top" alt="LVT Parke Modern">
+                        <img src="/images/lvtparke.jpeg" class="card-img-top" alt="LVT Parke">
                         <div class="card-body">
-                            <h5 class="card-title">LVT Parke Modern</h5>
+                            <h5 class="card-title">LVT Parke </h5>
                             <p class="card-text">Suya dayanıklı ve modern tasarımlı LVT parke çeşitleri.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                         </div>
@@ -47,33 +47,41 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke7.jpg" class="card-img-top" alt="Laminat Parke Eko">
+                        <img src="/images/parke7.jpg" class="card-img-top" alt="Laminat Parke Premium">
                         <div class="card-body">
-                            <h5 class="card-title">Laminat Parke Eko</h5>
-                            <p class="card-text">Ekonomik ve çevre dostu laminat parke çözümleri.</p>
+                            <h5 class="card-title">Laminat Parke Premium</h5>
+                            <p class="card-text">üksek dayanıklılık ve şık tasarımlı premium laminat parke. Çizilmelere, lekelere ve yoğun kullanıma karşı üstün direnç sunar. Geniş renk ve desen seçenekleriyle modern mekanlar için ideal.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke8.jpg" class="card-img-top" alt="Masif Parke Özel">
+                        <img src="/images/parke8.jpg" class="card-img-top" alt="Laminat Parke Suya Dayanıklı">
                         <div class="card-body">
-                            <h5 class="card-title">Masif Parke Özel</h5>
-                            <p class="card-text">Özel tasarım masif parke ile mekanlarınıza prestij katın.</p>
+                            <h5 class="card-title">Laminat Parke Suya Dayanıklı</h5>
+                            <p class="card-text">Nemli alanlar için özel olarak tasarlanmış suya dayanıklı laminat parke. Mutfak ve antre gibi mekanlarda şıklık ve fonksiyonelliği bir arada sunar.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke9.jpg" class="card-img-top" alt="LVT Parke Lüks">
+                        <img src="/images/parke9.jpg" class="card-img-top" alt="Laminat Parke Balıksırtı">
                         <div class="card-body">
-                            <h5 class="card-title">LVT Parke Lüks</h5>
-                            <p class="card-text">Lüks ve dayanıklı LVT parke ile modern mekanlar yaratın.</p>
+                            <h5 class="card-title">Laminat Parke Balıksırtı</h5>
+                            <p class="card-text">Karakteristik balıksırtı deseniyle dinamik ve zarif bir görünüm. Modern iç mekanlara ferahlık katan, sürdürülebilir ve şık bir zemin kaplama çözümü.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="/images/parke9.jpg" class="card-img-top" alt="HPL (Yüksek Basınç Laminat) Parke">
+                        <div class="card-body">
+                            <h5 class="card-title">HPL (Yüksek Basınç Laminat) Parke</h5>
+                            <p class="card-text">Termoset reçinelerle güçlendirilmiş, aşınma ve ısıya karşı üstün dayanıklılık sunan premium laminat parke. Yoğun trafikli alanlar için ideal.</p>
+                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
                 </div>
             </div>
         </div>
