--- a/urunler.html
+++ b/urunler.html
@@ -84,7 +84,17 @@
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                 </div>
             </div>
-        </div>
+                                   <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="/images/parke9.jpg" class="card-img-top" alt="CPL (Sürekli Basınç Laminat) Parke">
+                        <div class="card-body">
+                            <h5 class="card-title">CPL (Sürekli Basınç Laminat) Parke</h5>
+                            <p class="card-text">Orta yoğunluklu basınçla üretilen, konut ve ticari alanlar için dayanıklı ve ekonomik bir laminat parke seçeneği.</p>
+                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                        </div>
+                    </div>
+                </div>   
+            </div>
     </section>
     
     <div id="footer-placeholder"></div> <!-- Footer burada yüklenecek -->
