--- a/urunler.html
+++ b/urunler.html
@@ -84,6 +84,7 @@
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                 </div>
             </div>
+                </div>
                                    <div class="col-md-4 mb-4">
                     <div class="card product-card">
                         <img src="/images/parke9.jpg" class="card-img-top" alt="CPL (Sürekli Basınç Laminat) Parke">
