--- a/urunler.html
+++ b/urunler.html
@@ -95,6 +95,15 @@
                         </div>
                     </div>
                 </div>   
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="/images/parke9.jpg" class="card-img-top" alt="DPL (Doğrudan Presleme Laminat) Parke">
+                        <div class="card-body">
+                            <h5 class="card-title">DPL (Doğrudan Presleme Laminat) Parke</h5>
+                            <p class="card-text">Dekoratif ve bütçe dostu laminat parke. Kolay montaj ve geniş desen seçenekleriyle her mekana uyum sağlar.</p>
+                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                        </div>
+                    </div>
             </div>
     </section>
     
