--- a/urunler.html
+++ b/urunler.html
@@ -50,7 +50,7 @@
                         <img src="/images/parke7.jpg" class="card-img-top" alt="Laminat Parke Premium">
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke Premium</h5>
-                            <p class="card-text">üksek dayanıklılık ve şık tasarımlı premium laminat parke. Çizilmelere, lekelere ve yoğun kullanıma karşı üstün direnç sunar. Geniş renk ve desen seçenekleriyle modern mekanlar için ideal.</p>
+                            <p class="card-text">Çizilmelere, lekelere ve yoğun kullanıma karşı üstün direnç sunar.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                         <img src="/images/parke9.jpg" class="card-img-top" alt="HPL (Yüksek Basınç Laminat) Parke">
                         <div class="card-body">
                             <h5 class="card-title">HPL (Yüksek Basınç Laminat) Parke</h5>
-                            <p class="card-text">Termoset reçinelerle güçlendirilmiş, aşınma ve ısıya karşı üstün dayanıklılık sunan premium laminat parke. Yoğun trafikli alanlar için ideal.</p>
+                            <p class="card-text">Yoğun trafikli alanlar için ideal.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                 </div>
             </div>
