--- a/urunler.html
+++ b/urunler.html
@@ -60,7 +60,7 @@
                         <img src="/images/parke8.jpg" class="card-img-top" alt="Laminat Parke Suya Dayanıklı">
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke Suya Dayanıklı</h5>
-                            <p class="card-text">Nemli alanlar için özel olarak tasarlanmış suya dayanıklı laminat parke. Mutfak ve antre gibi mekanlarda şıklık ve fonksiyonelliği bir arada sunar.</p>
+                            <p class="card-text">Nemli alanlar için özel olarak tasarlanmış suya dayanıklı laminat parke.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                         <img src="/images/parke9.jpg" class="card-img-top" alt="Laminat Parke Balıksırtı">
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke Balıksırtı</h5>
-                            <p class="card-text">Karakteristik balıksırtı deseniyle dinamik ve zarif bir görünüm. Modern iç mekanlara ferahlık katan, sürdürülebilir ve şık bir zemin kaplama çözümü.</p>
+                            <p class="card-text">Karakteristik balıksırtı deseniyle dinamik ve zarif bir görünüm.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                         <img src="/images/parke9.jpg" class="card-img-top" alt="HPL (Yüksek Basınç Laminat) Parke">
                         <div class="card-body">
                             <h5 class="card-title">HPL (Yüksek Basınç Laminat) Parke</h5>
-                            <p class="card-text">Yoğun trafikli alanlar için ideal.</p>
+                            <p class="card-text">Termoset reçinelerle güçlendirilmiş, aşınma ve ısıya karşı üstün dayanıklılık sunan premium laminat parke.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                 </div>
             </div>
