--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <section id="home" class="hero-section">
         <div class="container text-center">
-            <img src="/images/oykumlogo2.png" alt="Öyküm Toptan Parke Logo" class="hero-logo">
+            <img src="/images/oykumlogo.png" alt="Öyküm Toptan Parke Logo" class="hero-logo">
             <h1>Öyküm Toptan Parke</h1>
             <p>Kaliteli Parke Çözümleriyle Mekanlarınızı Yenileyin</p>
             <a href="urunler.html" class="btn btn-primary btn-lg">Ürünleri Keşfet</a>
