--- a/urunler.html
+++ b/urunler.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke9.jpg" class="card-img-top" alt="HPL (Yüksek Basınç Laminat) Parke">
+                        <img src="/images/parke9.jpg" class="card-img-top" alt="HPL (Yüksek Basınç) Parke">
                         <div class="card-body">
                             <h5 class="card-title">HPL (Yüksek Basınç Laminat) Parke</h5>
                             <p class="card-text">Termoset reçinelerle güçlendirilmiş, aşınma ve ısıya karşı üstün dayanıklılık sunan premium laminat parke.</p>
@@ -99,7 +99,7 @@
                     <div class="card product-card">
                         <img src="/images/parke9.jpg" class="card-img-top" alt="DPL (Doğrudan Presleme Laminat) Parke">
                         <div class="card-body">
-                            <h5 class="card-title">DPL (Doğrudan Presleme Laminat) Parke</h5>
+                            <h5 class="card-title">DPL (Doğrudan Presleme) Parke</h5>
                             <p class="card-text">Dekoratif ve bütçe dostu laminat parke. Kolay montaj ve geniş desen seçenekleriyle her mekana uyum sağlar.</p>
                             <button class="btn btn-outline-primary" disabled>Detaylar</button>
                         </div>
