--- a/urunler.html
+++ b/urunler.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke7.jpg" class="card-img-top" alt="Laminat Parke Premium">
+                        <img src="images/laminantparkepremium.jpg" class="card-img-top" alt="Laminat Parke Premium">
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke Premium</h5>
                             <p class="card-text">Çizilmelere, lekelere ve yoğun kullanıma karşı üstün direnç sunar.</p>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke8.jpg" class="card-img-top" alt="Laminat Parke Suya Dayanıklı">
+                        <img src="images/laminantparkesuyadayanikli.jpg" class="card-img-top" alt="Laminat Parke Suya Dayanıklı">
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke Suya Dayanıklı</h5>
                             <p class="card-text">Nemli alanlar için özel olarak tasarlanmış suya dayanıklı laminat parke.</p>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke9.jpg" class="card-img-top" alt="Laminat Parke Balıksırtı">
+                        <img src="images/laminantparkebaliksirti.jpg" class="card-img-top" alt="Laminat Parke Balıksırtı">
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke Balıksırtı</h5>
                             <p class="card-text">Karakteristik balıksırtı deseniyle dinamik ve zarif bir görünüm.</p>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke9.jpg" class="card-img-top" alt="HPL (Yüksek Basınç) Parke">
+                        <img src="images/hplparke.jpg" class="card-img-top" alt="HPL (Yüksek Basınç) Parke">
                         <div class="card-body">
                             <h5 class="card-title">HPL(Yüksek Basınç)Parke</h5>
                             <p class="card-text">Termoset reçinelerle güçlendirilmiş, aşınma ve ısıya karşı üstün dayanıklılık sunan premium laminat parke.</p>
@@ -87,7 +87,7 @@
                 </div>
                                    <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke9.jpg" class="card-img-top" alt="CPL (Sürekli Basınç Laminat) Parke">
+                        <img src="images/cplparke.jpg" class="card-img-top" alt="CPL (Sürekli Basınç Laminat) Parke">
                         <div class="card-body">
                             <h5 class="card-title">CPL (Sürekli Basınç Laminat) Parke</h5>
                             <p class="card-text">Orta yoğunluklu basınçla üretilen, konut ve ticari alanlar için dayanıklı ve ekonomik bir laminat parke seçeneği.</p>
@@ -97,7 +97,7 @@
                 </div>   
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/parke9.jpg" class="card-img-top" alt="DPL (Doğrudan Presleme Laminat) Parke">
+                        <img src="images/dplparke.jpg" class="card-img-top" alt="DPL (Doğrudan Presleme Laminat) Parke">
                         <div class="card-body">
                             <h5 class="card-title">DPL (Doğrudan Presleme) Parke</h5>
                             <p class="card-text">Dekoratif ve bütçe dostu laminat parke. Kolay montaj ve geniş desen seçenekleriyle her mekana uyum sağlar.</p>
