--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,11 @@
 <footer class="bg-dark text-white text-center py-3">
     <div class="container">
-        <p>&copy; 2013 Öyküm Toptan Parke. Tüm hakları saklıdır.</p>
         <div class="social-icons d-flex justify-content-center gap-3 my-3">
             <a href="https://www.instagram.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-instagram fa-2x"></i></a>
             <a href="https://www.facebook.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-facebook-f fa-2x"></i></a>
             <a href="https://www.twitter.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-twitter fa-2x"></i></a>
         </div>
-        
+        <p class="mb-0">&copy; 2013 Öyküm Toptan Parke. Tüm hakları saklıdır.</p>
     </div>
     <!-- WhatsApp Simgesi -->
     <a href="https://wa.me/905322055283" target="_blank" class="whatsapp-float">
