--- a/urunler.html
+++ b/urunler.html
@@ -21,8 +21,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke</h5>
                             <p class="card-text">Dayanıklı ve estetik laminat parke modellerimizle tanışın.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
-                        </div>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
+                                                    </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
