--- a/urunler.html
+++ b/urunler.html
@@ -31,7 +31,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Masif Parke</h5>
                             <p class="card-text">Doğal ahşap görünümüyle masif parke modelleri.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                           <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                         <div class="card-body">
                             <h5 class="card-title">LVT Parke </h5>
                             <p class="card-text">Suya dayanıklı ve modern tasarımlı LVT parke çeşitleri.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke Premium</h5>
                             <p class="card-text">Çizilmelere, lekelere ve yoğun kullanıma karşı üstün direnç sunar.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke Suya Dayanıklı</h5>
                             <p class="card-text">Nemli alanlar için özel olarak tasarlanmış suya dayanıklı laminat parke.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Laminat Parke Balıksırtı</h5>
                             <p class="card-text">Karakteristik balıksırtı deseniyle dinamik ve zarif bir görünüm.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                         <div class="card-body">
                             <h5 class="card-title">HPL(Yüksek Basınç)Parke</h5>
                             <p class="card-text">Termoset reçinelerle güçlendirilmiş, aşınma ve ısıya karşı üstün dayanıklılık sunan premium laminat parke.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                           <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                 </div>
             </div>
                 </div>
@@ -91,7 +91,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CPL (Sürekli Basınç Laminat) Parke</h5>
                             <p class="card-text">Orta yoğunluklu basınçla üretilen, konut ve ticari alanlar için dayanıklı ve ekonomik bir laminat parke seçeneği.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>   
@@ -101,7 +101,7 @@
                         <div class="card-body">
                             <h5 class="card-title">DPL (Doğrudan Presleme) Parke</h5>
                             <p class="card-text">Dekoratif ve bütçe dostu laminat parke. Kolay montaj ve geniş desen seçenekleriyle her mekana uyum sağlar.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
             </div>
